# OpenGL

./: CMakeLists.txt
configuration/: root_directory.h.in
include/glad/: glad.h
include/learnopengl/: camera.h  filesystem.h  model.h  shader.h  shader_s.h
src/: 01_first_view.cpp  02_test.cpp  glad.c  stb_image.cpp
src/1.getting_started/1.1.hello_window/: hello_window.cpp
src/1.getting_started/2.1.hello_triangle/: hello_triagnle.cpp
src/1.getting_started/2.2.hello_triangle_index/: hello_triangle_index.cpp
src/1.getting_started/2.3.hello_triangle_exercise1/: hello_triangle_exercise1.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: hello_triangle_exercise2.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: hello_triangle_exercise3.cpp
src/1.getting_started/3.1.shaders_uniform/: shaders_uniform.cpp
src/1.getting_started/3.2.shaders_interpolation/: shaders_interpolation.cpp
src/1.getting_started/3.3.shaders_class/: 3.3.shaders.fs  3.3.shaders.vs  shaders_class.cpp
src/1.getting_started/3.3.shaders_exercise/: 3.4.shaders_exercise1.cpp  3.5.shaders_exercise2.cpp  3.6.shaders_exercise3.cpp
src/1.getting_started/4.1.textures/: 4.1.texture.fs  4.1.textures.vs  textures.cpp
src/1.getting_started/4.2.textures_combined/: 4.2.textures.fs  4.2.textures.vs  textures_combined.cpp
src/1.getting_started/4.3.textures_exercise1/: textures_exercise1.cpp
src/1.getting_started/4.3.textures_exercise2/: 4.3.textures.fs  4.3.textures.vs  textures_exercise2.cpp
src/1.getting_started/4.4.textures_exercise2/: 4.3.textures.fs  4.3.textures.vs  textures_exercise2.cpp
src/1.getting_started/4.5.textures_exercise3/: 4.5.textures.fs  4.5.textures.vs  textures_exercise3.cpp
src/1.getting_started/5.1.transformations/: 5.1.transform.fs  5.1.transform.vs  transformations.cpp
src/1.getting_started/5.2.transformations_exercise/: 5.2.transforms.vs  transformations_exercise.cpp
src/1.getting_started/6.1.coordinate_systems/: 6.1.coordinate_systems.vs  coordinate_systems.cpp
src/1.getting_started/6.2.coordinate_system_depth/: 6.1.coordinate_systems.fs  coordinate_system_depth.cpp
src/1.getting_started/6.3.coordinate_system_multiple/: 6.3.coordinate_systems.vs  coordinate_system_multiple.cpp
src/2.lighting/1.colors/: 1.colors.fs  1.colors.vs  1.light_cube.fs  1.light_cube.vs  colors.cpp
src/2.lighting/2.1.basic_lighting_diffuse/: 2.1.basic_lighting.fs  2.1.basic_lighting.vs  2.1.light_cube.fs  2.1.light_cube.vs  basic_lighting_diffuse.cpp
src/2.lighting/2.2.basic_lighting_specular/: 2.2.basic_lighting.fs  2.2.basic_lighting.vs  2.2.light_cube.fs  2.2.light_cube.vs  basic_lighting_specular.cpp
src/2.lighting/3.1.materials/: 3.1.light_cube.vs  3.1.materials.fs  3.1.materials.vs  materials.cpp
src/2.lighting/3.2.materials_exercise1/: 3.2.light_cube.fs  3.2.light_cube.vs  3.2.materials.fs  3.2.materials.vs  materials_exercise.cpp
src/2.lighting/4.1.lighting_maps_diffuse_map/: 4.1.lighting_maps.fs  4.1.lighting_maps.vs  lighting_maps_diffuse.cpp
src/2.lighting/4.2.lighting_maps_specular/: lighting_maps_specular.cpp
src/2.lighting/4.3.lighting_maps_exercise/: 4.2.light_cube.fs  4.2.light_cube.vs  4.2.light_map.fs  lighting_maps_specular.cpp
